# src/main/java/com/example/Homebank/presentation/controllers/TransactionHeadController.java
@@ -2,7 +2,10 @@ package com.example.Homebank.presentation.controllers;
 
 import com.example.Homebank.businessLogic.services.TransactionHeadService;
 import com.example.Homebank.presentation.ApiPaths;
+import com.example.Homebank.presentation.dto.transactionhead.DeleteTransactionHeadDTO;
 import com.example.Homebank.presentation.dto.transactionhead.TransactionHeadDTO;
+import com.example.Homebank.presentation.dto.transactionhead.CreateTransactionHeadDTO;
+import com.example.Homebank.presentation.dto.transactionhead.UpdateTransactionHeadDTO;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.slf4j.Logger;
@@ -11,7 +14,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 /**
- * Controller responsible for transaction-head write operations.
+ * Controller responsible for transaction-head reads and writes.
  */
 @RestController
 @RequiredArgsConstructor
@@ -21,19 +24,44 @@ public class TransactionHeadController {
 
     private final TransactionHeadService transactionHeadService;
 
-    /**
-     * Handles requests to save a transaction head.
-     *
-     * @param transactionHead The transaction head to save.
-     * @return Response indicating whether the transaction head was successfully saved.
-     */
-    @PostMapping(ApiPaths.SAVE)
-    public ResponseEntity<String> saveTransactionHead(@Valid @RequestBody TransactionHeadDTO transactionHead) {
-        logger.info("Request to save transaction head received.");
+    @GetMapping(ApiPaths.TRANSACTION_HEAD)
+    public ResponseEntity<TransactionHeadDTO> getTransactionHead(@PathVariable int transactionHeadId) {
+        logger.info("Request to get transaction head with ID: {} received.", transactionHeadId);
 
-        transactionHeadService.saveTransactionHead(transactionHead);
-        return ResponseEntity.ok("Transaction head saved");
+        TransactionHeadDTO transactionHead = transactionHeadService.getTransactionHead(transactionHeadId);
+        return ResponseEntity.ok(transactionHead);
     }
+
+    /**
+     * Handles requests to create a transaction head.
+     *
+     * @param transactionHead The initial transaction head fields.
+     * @return Response indicating whether the transaction head was successfully created.
+     */
+    @PostMapping
+    public ResponseEntity<String> postTransactionHead(@Valid @RequestBody CreateTransactionHeadDTO transactionHead) {
+        logger.info("Request to create transaction head received.");
+
+        transactionHeadService.createTransactionHead(transactionHead);
+        return ResponseEntity.ok("Transaction head created.");
+    }
+
+
+    /**
+     * Handles requests to update a transaction head.
+     *
+     * @param transactionHeadId The ID of the transaction head to update.
+     * @param transactionHead   The transaction head to update.
+     * @return Response indicating whether the transaction head was successfully updated.
+     */
+    @PutMapping(ApiPaths.TRANSACTION_HEAD)
+    public ResponseEntity<String> updateTransactionHead(@PathVariable int transactionHeadId, @Valid @RequestBody UpdateTransactionHeadDTO transactionHead) {
+        logger.info("Request to update transaction head with ID: {} received.", transactionHeadId);
+
+        transactionHeadService.updateTransactionHead(transactionHeadId, transactionHead);
+        return ResponseEntity.ok("Transaction head updated");
+    }
+
 
     /**
      * Handles requests to set a transaction head as deleted.
@@ -42,7 +70,7 @@ public class TransactionHeadController {
      * @return Response indicating whether the transaction head was successfully set as deleted.
      */
     @PostMapping(ApiPaths.DELETE)
-    public ResponseEntity<String> deleteTransactionHead(@Valid @RequestBody TransactionHeadDTO transactionHead) {
+    public ResponseEntity<String> deleteTransactionHead(@Valid @RequestBody DeleteTransactionHeadDTO transactionHead) {
         logger.info("Request to delete transaction head with ID: {} received.", transactionHead.id());
 
         transactionHeadService.deleteTransactionHead(transactionHead);
